<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_sort_by"
        android:title="@string/menu_sort_by"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_sort_by_time"
                    android:title="@string/menu_sort_by_time"/>
                <item android:id="@+id/menu_sort_by_magnitude"
                    android:title="@string/menu_sort_by_magnitude"/>
            </group>
        </menu>
    </item>

    <item android:id="@+id/main_toolbar_menu_credits"
        android:title="@string/menu_credits"
        app:showAsAction="never"/>

    <item
        android:id="@+id/main_toolbar_menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />
</menu>